[GLUTEN-7410][CORE] Add test args to run spark-ut and use JAVA_HOME java to build thirdparty lib
Spark UTs need the above args to run and had to be supplied seperately
while running the tests. Third party lib was build using the jar on PATH
of system. Instead it should use the JAVA_HOME one.